get request for available equipment
